# email-sig-switch

./: pyproject.toml
src/email_sig_switch/: email-sig-switch.py  email_sig_switch.py  zan_dmenu.py
