[tool.poetry]
name = "email_sig_switch"
version = "0.1.0"
description = "A simple command for switching email signature files for thunderbird."
authors = ["Zan Owsley <zanowsley@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DanZanzibar/email-sig-switch.git"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
switch-email-signature = 'email_sig_switch.email_sig_switch:switch_signature'